A couple of new things!

--- a/Abbreviations/Abbreviations.tex
+++ b/Abbreviations/Abbreviations.tex
@@ -6,11 +6,12 @@
     
     \hline
 
+    BODMAS & Binary Orbit Dust Model with Accretion and Sputtering & Section \ref{sec:bodmas} \\
     CWB & Colliding Wind Binary  & Section \ref{sec:obtype} \\
     GMC & Giant Molecular Cloud & Section \ref{sec:obtype}\\
     LBV & Luminous Blue Variable & Section \ref{sec:obtype} \\
     OB  & O or B type star & Section \ref{sec:obtype} \\ 
-    RSG & Red Supergiant & Secion \ref{sec:obtype} \\
+    RSG & Red Supergiant & Section \ref{sec:obtype} \\
     WC  & WR Carbon Phase & Section \ref{sec:wrtype} \\
     WCd & Dust forming WC star & Section \ref{sec:cwbdust} \\
     WCR & Wind Collision Region & Section \ref{sec:wcr} \\
@@ -22,7 +23,8 @@
 
   \end{tabular} 
   \label{tbl:Abbreviations}
-  \caption{List of common abbreviations, if an abbreviation is important enough to warrant a subsection it is referenced}
   \end{table}
+
+List of common abbreviations, if an abbreviation is important enough to warrant a section in this thesis, the section will be referenced.
 
 \end{abbreviations}
