--- a/Acknowledgement/acknowledgement.tex
+++ b/Acknowledgement/acknowledgement.tex
@@ -7,7 +7,19 @@
 \setlength{\parindent}{17.62482pt}
 \setlength{\parskip}{0.0pt plus 1.0pt}
 
-Thanks everyone. 
+No good thesis\footnote{Though the quality of this one is debatable.} wouldn't be complete without a commitment to the authors friends.
+I first met some of you on literal day one of my undergraduate degree in Leeds, it's really quite incredible how you've all tolerated my nonsense for so long.
+From essentially forcing my way into Rob's house so I could cook some disastrous fried chicken, to playing \text{Super Smash Bros.} all night long on it's release day, to watching trashy movies over the internet at the height of the pandemic, these are moments I'll treasure for the rest of my life.
+Thank you all, for making me so happy these last 9 years.
+In particular, those who are still in Leeds, Rob, Matt, Kelsie and Alex; as well as those who aren't, Martin, Caz, Andy, and Devon. 
+
+To my partner Pruthvi, I cannot stress how unlikely it is that the two of us even met; two people finding each other on esoteric circles of the internet is like two particles colliding in the tenuous interstellar medium, if you'll excuse the extremely trashy metaphor.
+You've been supportive, helpful, and the most wonderful partner anyone could ask for; I truly am blessed to know you and love you.
+
+I would also like to thank the wonderful team at Leeds' ARC High Performance Computing department, considering the bulk of this work involves many 3D numerical simulations my use of ARC 4's compute nodes can be described as somewhere from ``excessive'' to ``taking the piss''.
+I also apologise for running my earlier simulations on the login nodes for multiple days, I swear it was an accident.
+
+Finally, I would like to thank Leandro Panizzon and his wife, Margarita, though Methylphenidate was originally synthesised by him to treat her low blood pressure, it also works quite well for dragging my attention-deficit riddled brain through this PhD.
 
 \end{acknowledgements}
 %\end{acknowledgmentslong}
