--- a/References/library.bib
+++ b/References/library.bib
@@ -296,6 +296,18 @@
   file = {/home/joseph/Zotero/storage/CPUA4ISQ/Cherchneff et al. - 1992 - Polycyclic Aromatic Hydrocarbon Formation in Carbo.pdf;/home/joseph/Zotero/storage/WYWQT2B6/ui.adsabs.harvard.edu.html}
 }
 
+@article{cherepashchukDetectabilityWolfRayetBinaries1976,
+  title = {Detectability of {{Wolf}}-{{Rayet}} Binaries from {{X}}-Rays.},
+  author = {Cherepashchuk, A. M.},
+  year = {1976},
+  month = aug,
+  journal = {Soviet Astronomy Letters},
+  volume = {2},
+  pages = {138},
+  keywords = {Astrophysics,Binary Stars,Companion Stars,Hot Stars,Stellar Envelopes,Stellar Mass Ejection,Stellar Radiation,Stellar Winds,Variable Stars,Wolf-Rayet Stars,X Ray Sources},
+  file = {/home/joseph/Zotero/storage/P2L923E2/Cherepashchuk - 1976 - Detectability of Wolf-Rayet binaries from X-rays..pdf}
+}
+
 @article{cherepashchukEvolutionWolfRayetStars2003,
   title = {Evolution of {{Wolf}}-{{Rayet}} Stars in Binary Systems: {{An}} Analysis of the Mass and Orbital-Eccentricity Distributions},
   shorttitle = {Evolution of {{Wolf}}-{{Rayet}} Stars in Binary Systems},
@@ -675,6 +687,12 @@
   file = {/home/joseph/Zotero/storage/DHM393BP/Fog - Optimizing subroutines in assembly language.pdf}
 }
 
+@book{FoundationsHighEnergyAstrophysics,
+  title = {Foundations of {{High}}-{{Energy Astrophysics}}},
+  abstract = {Written by one of today's most highly respected astrophysicists, Foundations of High-Energy Astrophysics is an introduction to the mathematical and physical techniques used in the study of high-energy astrophysics. Here, Mario Vietri approaches the basics of high-energy astrophysics with an emphasis on underlying physical processes as opposed to a more~mathematical approach. Alongside more traditional topics, Vietri presents new subjects increasingly considered crucial to understanding high-energy astrophysical sources, including the electrodynamics of cosmic sources, new developments in the theory of standard accretion disks,~and the physics of coronae, thick disks, and accretion onto magnetized objects. The most thorough and engaging survey of high-energy astrophysics available today, Foundations of High-Energy Astrophysics introduces the main physical processes relevant to the field in a rigorous yet accessible way, while paying careful attention to observational issues. Vietri's book will quickly become a classic text for students and active researchers in astronomy and astrophysics. Those in adjoining fields will also~find it a valuable addition to their personal libraries.},
+  file = {/home/joseph/Zotero/storage/CBFS4GBC/Foundations of High-Energy Astrophysics.pdf;/home/joseph/Zotero/storage/6KU5BB3B/bo5502346.html}
+}
+
 @article{friend_theory_1986,
   title = {The Theory of Radiatively Driven Stellar Winds. {{III}} - {{Wind}} Models with Finite Disk Correction and Rotation},
   author = {Friend, David B. and Abbott, David C.},
@@ -815,6 +833,21 @@
   archiveprefix = {arXiv},
   keywords = {Astrophysics - Instrumentation and Methods for Astrophysics,Computer Science - Distributed; Parallel; and Cluster Computing,Computer Science - Performance,Physics - Computational Physics},
   file = {/home/joseph/Zotero/storage/VNESKDGU/Grete et al. - 2020 - K-Athena a performance portable structured grid f.pdf;/home/joseph/Zotero/storage/47MV4FGQ/1905.html}
+}
+
+@article{grimaldoProtonAccelerationColliding2019,
+  title = {Proton {{Acceleration}} in {{Colliding Stellar Wind Binaries}}},
+  author = {Grimaldo, Emanuele and Reimer, Anita and Kissmann, Ralf and Niederwanger, Felix and Reitberger, Klaus},
+  year = {2019},
+  month = jan,
+  journal = {The Astrophysical Journal},
+  volume = {871},
+  pages = {55},
+  issn = {0004-637X},
+  doi = {10.3847/1538-4357/aaf6ee},
+  abstract = {The interaction between the strong winds in stellar colliding-wind binary (CWB) systems produces two shock fronts, delimiting the wind-collision region (WCR). There, particles are expected to be accelerated mainly via diffusive shock acceleration. We investigate the injection and acceleration of protons in typical CWB systems by means of Monte Carlo simulations, with both a test-particle approach and a nonlinear method modeling a shock locally modified by the backreaction of the accelerated protons. We use magnetohydrodynamic simulations to determine the background plasma in the WCR and its vicinity. This allows us to consider particle acceleration at both shocks, on either side of the WCR, with a realistic large-scale magnetic field. We highlight the possible effects of particle acceleration on the local shock profiles at the WCR. We include the effect of magnetic field amplification, due to resonant-streaming instability, and compare results without and with the backreaction of the accelerated protons. In the latter case, we find a lower flux of the nonthermal proton population and a considerable magnetic field amplification. This would significantly increase the synchrotron losses of relativistic electrons accelerated in CWB systems, lowering the maximal energy they can reach and strongly reducing the inverse Compton fluxes. As a result, {$\gamma$}-rays from CWBs would be predominantly due to the decay of neutral pions produced in nucleon-nucleon collisions. This might provide a way to explain why, in the vast majority of cases, CWB systems have not been identified as {$\gamma$}-ray sources, although they emit synchrotron radiation.},
+  keywords = {acceleration of particles,Astrophysics - High Energy Astrophysical Phenomena,binaries: general,magnetohydrodynamics: MHD,methods: numerical,shock waves},
+  file = {/home/joseph/Zotero/storage/TBZZBWBP/Grimaldo et al. - 2019 - Proton Acceleration in Colliding Stellar Wind Bina.pdf}
 }
 
 @article{hamaguchi_non-thermal_2018,
@@ -1034,6 +1067,32 @@
   file = {/home/joseph/Zotero/storage/UGAG9XT7/Iben and Livio - 1993 - Common Envelopes in Binary Star Evolution.pdf}
 }
 
+@book{ibenStellarEvolutionPhysics2012,
+  title = {Stellar {{Evolution Physics}}: {{Volume}} 1: {{Physical Processes}} in {{Stellar Interiors}}},
+  shorttitle = {Stellar {{Evolution Physics}}},
+  author = {Iben, Icko},
+  year = {2012},
+  volume = {1},
+  publisher = {{Cambridge University Press}},
+  address = {{Cambridge}},
+  doi = {10.1017/CBO9781139061223},
+  abstract = {This text describes the microscopic physics operating in stars and demonstrates how stars respond from formation, through hydrogen-burning phases, up to the onset of helium burning. Intended for beginning graduate students and senior undergraduates with a solid background in physics, it illustrates the intricate interplay between the microscopic physical processes and the stars' macroscopic responses. The volume starts with the gravitationally contracting phase which carries the star from formation to the core hydrogen-burning main sequence, through the main sequence phase, through shell hydrogen-burning phases as a red giant, up to the onset of core helium burning. Particular emphasis is placed on describing the gravothermal responses of stars to nuclear transformations in the interior and energy loss from the surface, responses which express the very essence of stellar evolution. The volume is replete with many illustrations and detailed numerical solutions to prepare the reader to program and calculate evolutionary models.},
+  isbn = {978-1-107-01656-9},
+  file = {/home/joseph/Zotero/storage/GRJ4IK4M/Iben - 2012 - Stellar Evolution Physics Volume 1 Physical Proc.pdf;/home/joseph/Zotero/storage/ML22DWJL/1BBE1613B17583D9A9DE4C1EE8999C8F.html}
+}
+
+@book{ibenStellarEvolutionPhysics2013,
+  title = {Stellar {{Evolution Physics}}, {{Volume}} 2: {{Advanced Evolution}} of {{Single Stars}}},
+  shorttitle = {Stellar {{Evolution Physics}}, {{Volume}} 2},
+  author = {Iben, Jr., Icko},
+  year = {2013},
+  month = jan,
+  journal = {Stellar Evolution Physics},
+  abstract = {This volume describes some of the microphysics which operates in stars in advanced stages of their evolution and demonstrates with many illustrations how stars respond to this microphysics. Models of low and intermediate mass stars are evolved through the core helium-burning phase, the asymptotic giant branch (alternating shell hydrogen and shell helium burning) phase, and through the final cooling white dwarf phase. A massive model is carried from the core helium-burning phase through core and shell carbon-burning phases. Written for graduate students who have mastered the principles of stellar evolution as developed in volume 1, sufficient attention is paid to how numerical solutions are obtained to enable the reader to engage in model construction on a professional level.},
+  keywords = {beta decay and electron capture,current-current weak interactions,diffusion,gravitational settling,heat conduction by electrons,helium-burning nucleosynthesis,neutrino and antineutrino production,neutron production,planetary nebula phase,stellar evolution,white dwarf evolution},
+  file = {/home/joseph/Zotero/storage/WL5DBAA6/Iben - 2013 - Stellar Evolution Physics, Volume 2 Advanced Evol.pdf}
+}
+
 @book{international_astronomical_union_wolf-rayet_1995,
   title = {Wolf-{{Rayet}} Stars: Binaries, Colliding Winds, Evolution: Proceedings of the 163rd Symposium of the {{International Astronomical Union}}, Held in {{La Biodola}}, {{Elba}}, {{Italia}}, {{May}} 2-6, 1994},
   shorttitle = {Wolf-{{Rayet}} Stars},
@@ -1075,6 +1134,16 @@
   language = {en},
   keywords = {Low-storage,Method of lines,Runge–Kutta methods},
   file = {/home/joseph/Zotero/storage/EGWWZUTD/Ketcheson - 2010 - Runge–Kutta methods with minimum storage implement.pdf;/home/joseph/Zotero/storage/VSKIQFXH/S0021999109006251.html}
+}
+
+@book{kippenhahnStellarStructureEvolution2012,
+  title = {Stellar {{Structure}} and {{Evolution}}},
+  author = {Kippenhahn, Rudolf and Weigert, Alfred and Weiss, Achim},
+  year = {2012},
+  month = jan,
+  journal = {Stellar Structure and Evolution. ISBN: 978-3-642-30304-3. Berlin},
+  doi = {10.1007/978-3-642-30304-3},
+  file = {/home/joseph/Zotero/storage/NBMMRE5G/Kippenhahn et al. - 2012 - Stellar Structure and Evolution.pdf}
 }
 
 @book{krugel_physics_2002,
@@ -1425,6 +1494,22 @@
   abstract = {The observed interstellar extinction over the wavelength range 0.11 /xm {$<$} \`A {$<$} 1 /\textquestiondown m was fitted with a very general particle size distribution of uncoated graphite, enstatite, olivine, silicon carbide, iron, and magnetite. Combinations of these materials, up to three at a time, were considered. The cosmic abundances of the various constituents were taken into account as constraints on the possible distributions of particle sizes.},
   language = {en},
   file = {/home/joseph/Zotero/storage/TQFPKQ8N/Mathis et al. - 1977 - The size distribution of interstellar grains.pdf}
+}
+
+@article{mcclellandHeliumStarsUnderstanding2016,
+  title = {Helium Stars: Towards an Understanding of {{Wolf}}\textendash{{Rayet}} Evolution},
+  shorttitle = {Helium Stars},
+  author = {McClelland, L. A. S. and Eldridge, J. J.},
+  year = {2016},
+  month = jun,
+  journal = {Monthly Notices of the Royal Astronomical Society},
+  volume = {459},
+  number = {2},
+  pages = {1505--1518},
+  issn = {0035-8711},
+  doi = {10.1093/mnras/stw618},
+  abstract = {Wolf\textendash Rayet (WR) stars are massive stars that have lost most or all of their hydrogen via powerful stellar winds. Recent observations have indicated that hydrogen-free WR stars have cooler temperatures than those predicted by current evolutionary models. To investigate how varying mass-loss rate affects WR evolution, we have created a grid of pure helium star models. We compare our results with Galactic and Large Magellanic Cloud WR observations and show that the temperature ranges of observed WR stars can be reproduced by varying the mass-loss rate, which effectively determines the size of the helium envelope around the core. We also find that WN and WO stars arise from more massive stars, whereas WC stars come from lower masses. This contradicts the standard Conti scenario by which WN and WC stars evolve in an age sequence. We also predict the magnitudes of our models at core-collapse and compare with observations of nearby progenitors of Type Ib/c supernovae. We confirm the findings of previous studies that suggest WR stars are the progenitors of core-collapse supernovae; the progenitors would remain unobserved except in the cases where the progenitor is a low-mass helium giant, as is the case of iPTF13bvn.},
+  file = {/home/joseph/Zotero/storage/8H4RHYAJ/McClelland and Eldridge - 2016 - Helium stars towards an understanding of Wolf–Ray.pdf;/home/joseph/Zotero/storage/QYULLKUG/2594982.html}
 }
 
 @article{mclay_computational_1996,
@@ -1862,6 +1947,21 @@
   file = {/home/joseph/Zotero/storage/KRLRW72H/Pittard et al. - 2020 - Colliding-wind binary systems Diffusive shock acc.pdf;/home/joseph/Zotero/storage/HJNCUQVD/1912.html}
 }
 
+@article{pollockEinsteinViewWolfRayet1987,
+  title = {The {{Einstein View}} of the {{Wolf}}-{{Rayet Stars}}},
+  author = {Pollock, A. M. T.},
+  year = {1987},
+  month = sep,
+  journal = {The Astrophysical Journal},
+  volume = {320},
+  pages = {283},
+  issn = {0004-637X},
+  doi = {10.1086/165539},
+  abstract = {A uniform analysis of all 48 Wolf-Rayet stars observed with the IPC of the Einstein Observatory shows that their X-ray luminosities cover a range of more than two orders of magnitude. Most of the brightest stars are either also sources of nonthermal radio radiation, in which case the measurements interpreted as Compton scattering of photospheric radiation by relativistic electrons imply surface magnetic fields of up to a few hundred Gauss, or massive binary systems where the X-rays could come from colliding winds. The single stars and many of the stars that have been proposed as low-mass binaries are geneally among the faintest objects and probably emit a lower proportion of their bolometric luminosities at X-ray frequencies than OB stars of similar absolute magnitude.},
+  keywords = {Astrophysics,Binary Stars,Compton Effect,Computational Astrophysics,Early Stars,Heao 2,Nonthermal Radiation,Ozone,RADIATION MECHANISMS,Radio Emission,Relativistic Electron Beams,STARS: LUMINOSITIES,STARS: WOLF-RAYET,STARS: X-RAYS,Stellar Luminosity,Wolf-Rayet Stars,X Ray Sources},
+  file = {/home/joseph/Zotero/storage/HY4T8SAV/Pollock - 1987 - The Einstein View of the Wolf-Rayet Stars.pdf}
+}
+
 @book{pope_turbulent_2000,
   title = {Turbulent {{Flows}}},
   author = {Pope, S. B. and Pope, Stephen B.},
@@ -2118,6 +2218,21 @@
   abstract = {Context. The life cycles of massive stars from the main sequence to their explosion as supernovae or gamma ray bursts are not yet fully clear, and the empirical results from spectral analyses are partly in conflict with current evolutionary models. The spectral analysis of Wolf-Rayet stars requires the detailed modeling of expanding stellar atmospheres in non-LTE. The Galactic WN stars have been comprehensively analyzed with such models of the latest stage of sophistication, while a similarly comprehensive study of the Galactic WC sample remains undone. {$<$}BR /{$>$} Aims: We aim to establish the stellar parameters and mass-loss rates of the Galactic WC stars. These data provide the empirical basis of studies of (i) the role of WC stars in the evolution of massive stars, (ii) the wind-driving mechanisms, and (iii) the feedback of WC stars as input to models of the chemical and dynamical evolution of galaxies. {$<$}BR /{$>$} Methods: We analyze the nearly complete sample of un-obscured Galactic WC stars, using optical spectra as well as ultraviolet spectra when available. The observations are fitted with theoretical spectra, using the Potsdam Wolf-Rayet (PoWR) model atmosphere code. A large grid of line-blanked models has been established for the range of WC subtypes WC4 - WC8, and smaller grids for the WC9 parameter domain. Both WO stars and WN/WC transit types are also analyzed using special models. {$<$}BR /{$>$} Results: Stellar and atmospheric parameters are derived for more than 50 Galactic WC and two WO stars, covering almost the whole Galactic WC population as far as the stars are single, and un-obscured in the visual. In the Hertzsprung-Russell diagram, the WC stars reside between the hydrogen and the helium zero-age main sequences, having luminosities L from 10\textsuperscript{4.9} to 10\textsuperscript{5.6} L\textsubscript{{$\odot$}}. The mass-loss rates scale very tightly with L\textsuperscript{0.8}. The two WO stars in our sample turn out to be outstandingly hot ({$\approx$}200 kK) and do not fit into the WC scheme. {$<$}BR /{$>$} Conclusions: By comparing the empirical WC positions in the Hertzsprung-Russell diagram with evolutionary models, and from recent supernova statistics, we conclude that WC stars have evolved from initial masses between 20 solar masses and 45 M\textsubscript{{$\odot$}}. In contrast to previous assumptions, it seems that WC stars in general do not descend from the most massive stars. Only the WO stars might stem from progenitors that have been initially more massive than 45 M\textsubscript{{$\odot$}}. {$<$}P /{$>$}Appendices A and B are available in electronic form at {$<$}A href="http://www.aanda.org"{$>$}http://www.aanda.org{$<$}/A{$>$}},
   language = {en},
   file = {/home/joseph/Zotero/storage/JZZFLYHQ/Sander et al. - 2012 - The Galactic WC stars. Stellar parameters from spe.pdf;/home/joseph/Zotero/storage/SNBTRUQC/abstract.html}
+}
+
+@article{sanyalMassiveMainsequenceStars2015,
+  title = {Massive Main-Sequence Stars Evolving at the {{Eddington}} Limit},
+  author = {Sanyal, D. and Grassitelli, L. and Langer, N. and Bestenlehner, J. M.},
+  year = {2015},
+  month = aug,
+  journal = {Astronomy and Astrophysics},
+  volume = {580},
+  pages = {A20},
+  issn = {0004-6361},
+  doi = {10.1051/0004-6361/201525945},
+  abstract = {Context. Massive stars play a vital role in the Universe, however, their evolution even on the main-sequence is not yet well understood. {$<$}BR /{$>$} Aims: Because of the steep mass-luminosity relation, massive main-sequence stars become extremely luminous. This brings their envelopes very close to the Eddington limit. We analyse stellar evolutionary models in which the Eddington limit is reached and exceeded, explore the rich diversity of physical phenomena that take place in their envelopes, and investigate their observational consequences. {$<$}BR /{$>$} Methods: We use published grids of detailed stellar models, computed with a state-of-the-art, one-dimensional hydrodynamic stellar evolution code using LMC composition, to investigate the envelope properties of core hydrogen burning massive stars. {$<$}BR /{$>$} Results: We find that the Eddington limit is almost never reached at the stellar surface, even for stars up to 500 M\textsubscript{{$\Sun$}}. When we define an appropriate Eddington limit locally in the stellar envelope, we can show that most stars more massive than \textasciitilde 40 M\textsubscript{{$\Sun$}} actually exceed this limit, in particular, in the partial ionisation zones of iron, helium, or hydrogen. While most models adjust their structure such that the local Eddington limit is exceeded at most by a few per cent, our most extreme models do so by a factor of more than seven. We find that the local violation of the Eddington limit has severe consequences for the envelope structure, as it leads to envelope inflation, convection, density inversions, and, possibly to, pulsations. We find that all models with luminosities higher than 4 \texttimes{} 10\textsuperscript{5}L\textsubscript{{$\Sun$}}, i.e. stars above \textasciitilde 40 M\textsubscript{{$\Sun$}} show inflation, with a radius increase of up to a factor of about 40. We find that the hot edge of the S Dor variability region coincides with a line beyond which our models are inflated by more than a factor of two, indicating a possible connection between S Dor variability and inflation. Furthermore, our coolest models show highly inflated envelopes with masses of up to several solar masses, and appear to be candidates for producing major luminous blue variable eruptions. {$<$}BR /{$>$} Conclusions: Our models show that the Eddington limit is expected to be reached in all stars above \textasciitilde 40 M\textsubscript{{$\Sun$}} in the LMC, even in lower mass stars in the Galaxy, or in close binaries or rapid rotators. While our results do not support the idea of a direct super-Eddington wind driven by continuum photons, the consequences of the Eddington limit in the form of inflation, pulsations and possibly eruptions may well give rise to a significant enhancement of the time averaged mass-loss rate. {$<$}P /{$>$}Appendices are available in electronic form at {$<$}A href="http://www.aanda.org/10.1051/0004-6361/201525945/olm"{$>$}http://www.aanda.org{$<$}/A{$>$}},
+  language = {en},
+  file = {/home/joseph/Zotero/storage/5ISB3BUS/Sanyal et al. - 2015 - Massive main-sequence stars evolving at the Edding.pdf;/home/joseph/Zotero/storage/USL5JTP2/abstract.html}
 }
 
 @article{soulain_sphere_2018,
@@ -2646,6 +2761,18 @@
   file = {/home/joseph/Zotero/storage/CWSEAGSZ/Wareing et al. - 2016 - Magnetohydrodynamical simulation of the formation .pdf;/home/joseph/Zotero/storage/YMCBPXYL/Wareing et al. - 2016 - Magnetohydrodynamical simulation of the formation .pdf;/home/joseph/Zotero/storage/D5I7DXRJ/2594945.html}
 }
 
+@book{weinbergLecturesAstrophysics2019,
+  title = {Lectures on {{Astrophysics}}},
+  author = {Weinberg, Steven},
+  year = {2019},
+  publisher = {{Cambridge University Press}},
+  address = {{Cambridge}},
+  doi = {10.1017/9781108227445},
+  abstract = {Lectures on Astrophysics provides an account of classic and contemporary aspects of astrophysics, with an emphasis on analytic calculations and physical understanding. It introduces fundamental topics in astrophysics, including the properties of single and binary stars, the phenomena associated with interstellar matter, and the structure of galaxies. Nobel Laureate Steven Weinberg combines exceptional physical insight with his gift for clear exposition to cover exciting recent developments and new results. Emphasizing theoretical results, and explaining their derivation and application, this book provides an invaluable resource for physics and astronomy students and researchers.},
+  isbn = {978-1-108-41507-1},
+  file = {/home/joseph/Zotero/storage/SR965JBS/Weinberg - 2019 - Lectures on Astrophysics.pdf;/home/joseph/Zotero/storage/TAMZATL4/3D0172CFA94BAC40E8B1E3A200B042BC.html}
+}
+
 @book{wendt_computational_2008,
   title = {Computational {{Fluid Dynamics}}: {{An Introduction}}},
   shorttitle = {Computational {{Fluid Dynamics}}},
@@ -2672,6 +2799,20 @@
   isbn = {978-1-4822-6864-5},
   language = {en},
   file = {/home/joseph/Zotero/storage/3X7LLDC9/Whittet - 2002 - Dust in the Galactic Environment.pdf}
+}
+
+@article{wiescherIgnitionCoolingXRay2000,
+  title = {Ignition and {{Cooling}} of {{X}}-{{Ray Bursts}}},
+  author = {Wiescher, Michael and Schatz, Hendrik},
+  year = {2000},
+  month = oct,
+  journal = {Progress of Theoretical Physics Supplement},
+  volume = {140},
+  pages = {11--32},
+  issn = {0375-9687},
+  doi = {10.1143/PTPS.140.11},
+  abstract = {This paper presents a discussion of the nuclear physics aspects important for the modeling of stellar nucleosynthesis. Particular emphasis is given to the thermonuclear runaway on the surface of accreting neutron stars. We will mainly focus on the discussion of the reaction sequence which causes the break-up of the hot CNO-cycles and triggers the runaway and the associated rapid energy release. Emphasis is also given to the nuclear structure aspects which cause the runaway to stall which subsequently will initiate the radiative cooling phase of the X-ray burst.},
+  file = {/home/joseph/Zotero/storage/BFP3572W/Wiescher and Schatz - 2000 - Ignition and Cooling of X-Ray Bursts.pdf;/home/joseph/Zotero/storage/GXCP7AWU/1848002.html}
 }
 
 @article{williams_dust_1990,
@@ -2849,6 +2990,17 @@
   language = {en},
   keywords = {Astrophysics - Solar and Stellar Astrophysics},
   file = {/home/joseph/Zotero/storage/KMAIGT8I/Williams - 2011 - WR 140 in the Infrared.pdf}
+}
+
+@article{WolfRayetStarsProceedings2015,
+  title = {Wolf-{{Rayet Stars}} : {{Proceedings}} of an {{International Workshop}} Held in {{Potsdam}}, {{Germany}}, 1.\textendash 5. {{June}} 2015},
+  shorttitle = {Wolf-{{Rayet Stars}}},
+  year = {2015},
+  publisher = {{Universit\"atsverlag Potsdam}},
+  abstract = {Nearly 150 years ago, the French astronomers Charles Wolf and Georges Rayet described stars with very conspicuous spectra that are dominated by bright and broad emission lines. Meanwhile termed Wolf-Rayet Stars after their discoverers, those objects turned out to represent important stages in the life of massive stars. As the first conference in a long time that was specifically dedicated to Wolf-Rayet stars, an international workshop was held in Potsdam, Germany, from 1.-5. June 2015. About 100 participants, comprising most of the leading experts in the field as well as as many young scientists, gathered for one week of extensive scientific exchange and discussions. Considerable progress has been reported throughout, e.g. on finding  such stars, modeling and analyzing their spectra, understanding their evolutionary context, and studying their circumstellar nebulae. While some major questions regarding Wolf-Rayet stars still remain open 150 years after their discovery, it is clear today that these objects are not just interesting stars as such, but also keystones in the evolution of galaxies. These proceedings summarize the talks and posters presented at the Potsdam Wolf-Rayet workshop. Moreover, they also include the questions, comments, and discussions emerging after each talk, thereby giving a rare overview not only about the research, but also about the current debates and unknowns in the field. The Scientific Organizing Committee (SOC) included Alceste Bonanos (Athens), Paul Crowther (Sheffield), John Eldridge (Auckland), Wolf-Rainer Hamann (Potsdam, Chair), John Hillier (Pittsburgh), Claus Leitherer (Baltimore), Philip Massey (Flagstaff), George Meynet (Geneva), Tony Moffat (Montreal), Nicole St-Louis (Montreal), and Dany Vanbeveren (Brussels).},
+  copyright = {http://rightsstatements.org/vocab/InC/1.0/},
+  language = {eng},
+  file = {/home/joseph/Zotero/storage/F9Y3X6LX/2015 - Wolf-Rayet Stars  Proceedings of an International.pdf;/home/joseph/Zotero/storage/NDICG2PK/8426.html}
 }
 
 @article{yudinSpeckleInterferometryRadiative2001,
