--- a/Thesis.tex
+++ b/Thesis.tex
@@ -67,6 +67,7 @@
 
 \usepackage{siunitx} % Better units, especially SI
 \usepackage{mathtools}
+\usepackage{longtable}
 
 % Setup for BibLaTeX, used instead of BibTeX as it is more flexible and has proper APA citation
 \usepackage[
