--- a/Thesis.tex
+++ b/Thesis.tex
@@ -7,8 +7,8 @@
 \graphicspath{{./Chapters/Chapter_1_Introduction/Figures}     
               {./Chapters/Chapter_2_Background/Figures}
               {./Chapters/Chapter_3_Numerical_Simulations/Figures}
-              {./Chapters/Chapter_4_Parameter_Space_Paper/Figures}
-              {./Chapters/Chapter_5_Real_Systems_Paper/Figures}
+              {./Chapters/Chapter_4_Parameter_Space_Paper}
+              {./Chapters/Chapter_5_Real_Systems_Paper}
               {./Chapters/Chapter_6_Final_Notes/Figures}
               {./ThesisFigs/}}
 
@@ -67,7 +67,17 @@
 
 \usepackage{siunitx} % Better units, especially SI
 \usepackage{mathtools}
+% Better tables
 \usepackage{longtable}
+\usepackage{booktabs}
+%Captions for subfigures
+\usepackage{caption}
+
+
+
+\newcommand{\tx}{\text}
+\newcommand{\ts}{\textsuperscript}
+
 
 % Setup for BibLaTeX, used instead of BibTeX as it is more flexible and has proper APA citation
 \usepackage[
@@ -98,7 +108,6 @@
 {\text{pc}}
 \DeclareSIUnit[]\erg
 {\text{erg}}
-
 
 \begin{document}
 %\baselineskip=18pt plus1pt
